[gd_scene load_steps=6 format=3 uid="uid://uq3t3sj7y2ik"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_pmftf"]
[ext_resource type="Theme" uid="uid://d3us6r3u2b0ao" path="res://resources/base_theme.tres" id="2_cur66"]
[ext_resource type="Texture2D" uid="uid://cs6usue2rj3cs" path="res://player_characters/sprites/frog_simple.png" id="3_deelq"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_5ktyc"]
friction = 0.8
bounce = 0.1

[sub_resource type="CircleShape2D" id="CircleShape2D_iwob6"]
radius = 86.99

[node name="Player" type="RigidBody2D" node_paths=PackedStringArray("sprite", "collider", "name_tag", "particle")]
collision_layer = 2
collision_mask = 7
physics_material_override = SubResource("PhysicsMaterial_5ktyc")
center_of_mass_mode = 1
lock_rotation = true
continuous_cd = 1
max_contacts_reported = 2
linear_damp_mode = 1
linear_damp = 0.1
angular_damp_mode = 1
angular_damp = 0.1
script = ExtResource("1_pmftf")
sprite = NodePath("PlayerSprite")
collider = NodePath("PlayerCollider")
name_tag = NodePath("Title")
particle = NodePath("Particle")

[node name="Title" type="Label" parent="."]
z_index = 100
z_as_relative = false
texture_filter = 6
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -70.0
offset_right = 40.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme = ExtResource("2_cur66")
text = "Player 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("3_deelq")

[node name="PlayerCollider" type="CollisionPolygon2D" parent="."]
position = Vector2(43, -22)
polygon = PackedVector2Array(-79, 70, -1, 70, 5, 64, 5, 4, -7, -8, -67, -8, -79, -2, -85, 4, -91, 16, -91, 58)

[node name="DragLine" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 0, 0)

[node name="ShotArc" type="Line2D" parent="."]
width = 5.0
default_color = Color(0.621524, 0.621524, 0.621524, 1)

[node name="Particle" type="CPUParticles2D" parent="."]
emitting = false
amount = 60
lifetime = 0.5
one_shot = true
explosiveness = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 227.1
initial_velocity_max = 227.1
scale_amount_max = 5.05
color = Color(1, 0.866667, 0, 1)

[node name="DragArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DragArea"]
scale = Vector2(0.7, 0.7)
shape = SubResource("CircleShape2D_iwob6")

[connection signal="input_event" from="DragArea" to="." method="_on_drag_area_input_event"]
